refactor(api): ♻️ 优化服务安装控制器及安全认证服务
重构ServiceInstallController相关代码，增加日志记录、性能监控及JDK21新特性支持：
1. 为每个接口添加@Timed注解进行性能监控
2. 使用JDK21的var语法和虚拟线程信息记录
3. 添加详细的日志输出和线程信息跟踪
4. 改进返回值类型化和文档注释

同时优化CustomUserDetailsService安全认证逻辑：
1. 使用DTO替换Entity进行权限验证
2. 增加JDK21特性支持
3. 改进日志记录方式

并行修改ParcelController代码结构：
1. 添加性能监控和线程信息记录
2. 使用JDK21新特性重构代码
3. 增加类型安全的变量声明

这些修改提高了代码可维护性和运行时可观测性，同时为后续升级到JDK21做好准备

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>